<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    android:orientation="vertical"
    tools:context=".SecondActivity">


    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="@string/tv_address"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_house"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tv_house"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/te_house"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:focusable="auto"
        android:inputType="textCapCharacters"
        android:singleLine="true"
        android:textSize="18sp"
        android:hint="@string/te_house"
        />

    <TextView
        android:id="@+id/tv_street"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tv_street"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/te_street"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:singleLine="true"
        android:textSize="18sp"
        android:hint="@string/te_street"
        android:inputType="textCapWords" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tv_city"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/te_city"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:singleLine="true"
        android:textSize="18sp"
        android:hint="@string/te_city"
        android:inputType="textCapWords" />

    <Button
        android:id="@+id/bt_address"
        android:padding="5dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/bt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>