<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp"
    tools:context=".ThirdActivity">

    <TextView
        android:id="@+id/tv_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="@string/tv_other"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_roll"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tv_house"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/te_roll"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:focusable="auto"
        android:inputType="textCapWords"
        android:singleLine="true"
        android:textSize="18sp"
        android:hint="@string/te_roll"
        />

    <TextView
        android:id="@+id/tv_email"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tv_email"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/te_email"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:focusable="auto"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textSize="18sp"
        android:hint="@string/te_email"
        />

    <Button
        android:id="@+id/bt_other"
        android:padding="5dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/bt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>