<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_centerVertical="true"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="14dp"
    android:isScrollContainer="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="@string/tv_name"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_firstName"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tv_firstName"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/te_firstName"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:focusable="auto"
        android:inputType="textCapWords"
        android:singleLine="true"
        android:textSize="18sp"
        android:digits="qwertzuiopasdfghjklyxcvbnm,QWERTYUIOPASDFGHJKLZXCVBNM"
        android:hint="@string/te_nameFirstHint"
         />

    <TextView
        android:id="@+id/tv_lastName"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tv_lastName"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/te_lastName"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:singleLine="true"
        android:textSize="18sp"
        android:hint="@string/te_nameLastHint"
        android:digits="qwertzuiopasdfghjklyxcvbnm,QWERTYUIOPASDFGHJKLZXCVBNM"
        android:inputType="textCapWords" />

    <Button
        android:id="@+id/bt_name"
        android:padding="5dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/bt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
</ScrollView>